Add locked game modes and scalable network play